# mat-inf

./: .gitignore
compulsory_homeworks/: .gitignore
compulsory_homeworks/01_matrix/: matrix_operations.py  matrix_operations_test.py
compulsory_homeworks/02_radixSort/: .gitignore  README.md  main.cpp  rsort.cpp  sort.py  sort_test.py
compulsory_homeworks/04_planner/: .gitignore  CMakeLists.txt  astar.cpp  astar.h  mazes.py  path_checker.py  planner.py
compulsory_homeworks/05_game/: CMakeLists.txt  UI.py  my_player.py  player.cpp
homeworks/compulsory_homeworks/hw_01/: README.md
homeworks/voluntary_homeworks/homework_01/: README.md  draw_house.py
homeworks/voluntary_homeworks/homework_02/: main.py
learn/: 14_networkx_graphs.ipynb
learn/11_ml_basics/: convolution_neural_network.ipynb  linear_neural_network.ipynb  mnist.ipynb
learn/15_bfs/: BFS.py  grid_map.py  mazes.py  path_checker.py  planner.py
lecture_01/: README.md  basic_python_operations.py  loops_and_cycles.py
lecture_02/: coding_style.py  functions.py
lecture_03/: README.md  jupytern_notebook.ipynb  libraries.py
lecture_04/: arrays.ipynb  exercises.ipynb
lecture_05/: reading_terminal_and_files.ipynb
lecture_11/: .gitignore  convolution_neural_network.ipynb
radixSort/: .gitignore  CMakeLists.txt  main.cpp  rsort.h  sort.py  sort_test.py
